# zllm

./: .gitignore  BENCHMARKS.md  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  SUMMARY.md  TESTING.md  VULKAN_PLAN.md  build.rs
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
configs/: default.toml  goals.json  local-test.toml
docs/: SUMMARY.md  TESTING.md  V1_PLAN.md
proto/: admin.proto  control.proto  inference.proto
scripts/: bench.ps1  install.ps1
src/: config.rs  error.rs  lib.rs  main.rs  metrics.rs
src/backend/: arch.rs  dummy.rs  mod.rs  traits.rs
src/backend/candle/: backend.rs  gguf_vocab.rs  mod.rs  q4k_avx512.rs  q4k_repack.rs  quantized_llama_fork.rs  sdpa_cpu.rs  tokenizer.rs
src/backend/gpu/: batch.rs  mod.rs  sampling.rs  shaders.rs
src/backend/vulkan/: mod.rs  spv.rs  tests.rs
src/backend/vulkan/shaders/: argmax.comp  argmax.spv  batched_matvec_f16.comp  batched_matvec_f16.spv  batched_matvec_q4k.comp  batched_matvec_q4k.spv  batched_matvec_q6k.comp  batched_matvec_q6k.spv  bnorm.comp  bnorm.spv  brope.comp  brope.spv  bsdpa.comp  bsdpa.spv  bsdpa_decode.comp  bsdpa_decode.spv  bsdpa_offset.spv  bsdpa_offset.wgsl  bsdpa_slot.comp  bsdpa_slot.spv  bsilu.comp  bsilu.spv  causal_softmax.comp  causal_softmax.spv  coopmat_attn_gemm.comp  coopmat_attn_gemm.spv  coopmat_attn_gemm_n64.spv  coopmat_flash_attn.comp  coopmat_flash_attn.spv  coopmat_gemm.comp  coopmat_gemm.spv  coopmat_matmul.comp  coopmat_matmul.spv  coopmat_q4k_gemm.comp  coopmat_q4k_gemm.spv  coopmat_q4k_gemm_m16.comp  coopmat_q4k_gemm_m16.spv  decode_matvec_down_q4k.comp  decode_matvec_down_q4k.spv  decode_matvec_q3k.spv  (+55 more)
src/control_plane/: gateway.rs  goal_manager.rs  mod.rs  router.rs  scheduler.rs
src/engine/: confidence.rs  decode_ctrl.rs  difficulty.rs  hallucination.rs  json_schema.rs  layer_stepper.rs  logit_fsm.rs  logprobs.rs  memory_store.rs  mod.rs  reasoning_budget.rs  runner.rs  runner_observer.rs  sampler.rs  spec_decode.rs
src/engine/hooks/: early_exit.rs  memory_inject.rs  mod.rs  registry.rs  steering.rs  traits.rs
src/memory/: allocator.rs  block.rs  isolation.rs  mod.rs
src/server/: chat_template.rs  chat_ui.html  grpc.rs  mod.rs  rest.rs
tests/: glsl_compile.rs  headmajor_kv.rs  hetero_prefill.rs  matmul_q4k_batched.rs  matmul_scaling.rs  naga_spirv_probe.rs  q3k_dequant.rs  quant_sensitivity.rs  test_hardening.rs  test_openai_conformance.rs  test_real_inference.rs  test_smoke.rs  vk_q3k_matvec.rs
