[package]
name = "zllm"
version = "0.1.0"
edition = "2024"
description = "ZLLM — White-box LLM inference engine with zero-copy latent intercept"
license = "MIT"

[[bin]]
name = "zllm"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# REST server (axum). gRPC was removed in v0.4 — installed-app surface
# is REST + chat UI only.
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
futures = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# CLI
clap = { version = "4", features = ["derive"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Metrics
prometheus = "0.14"

# ML inference (candle)
candle-core = "0.10"
candle-nn = "0.10"
candle-transformers = "0.10"
tokenizers = "0.21"
hf-hub = { version = "0.4", default-features = false, features = ["rustls-tls", "ureq"] }

# Utilities
bitvec = "1"
rand = "0.9"
uuid = { version = "1", features = ["v4"] }

[features]
default = []
cuda = [
    "candle-core/cuda",
    "candle-nn/cuda",
    "candle-transformers/cuda",
]
metal = [
    "candle-core/metal",
    "candle-nn/metal",
    "candle-transformers/metal",
]

