[package]
name = "zllm"
version = "0.9.0"
edition = "2024"
description = "ZLLM — White-box LLM inference engine with zero-copy latent intercept"
license = "MIT"

[[bin]]
name = "zllm"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Grammar-constrained decoding: regex -> byte-level DFA for token masking
# (already in the tree transitively via regex/tokenizers; same 0.4.x version).
regex-automata = "0.4"

# REST server (axum). gRPC was removed in v0.4 — installed-app surface
# is REST + chat UI only.
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
futures = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# CLI
clap = { version = "4", features = ["derive"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Metrics
prometheus = "0.14"

# ML inference (candle)
candle-core = "0.10"
candle-nn = "0.10"
candle-transformers = "0.10"
rayon = "1.10"
core_affinity = "0.8"
tokenizers = "0.21"
hf-hub = { version = "0.4", default-features = false, features = ["rustls-tls", "ureq"] }

# Utilities
bitvec = "1"
rand = "0.9"
uuid = { version = "1", features = ["v4"] }

# iGPU compute (wgpu → Vulkan on AMD). Pure-Rust shader compilation via
# naga (WGSL), so no Vulkan SDK / cmake / glslang needed. Gated behind
# the `gpu` feature; off by default so CPU builds stay lean.
wgpu = { version = "22", optional = true }
pollster = { version = "0.3", optional = true }
bytemuck = { version = "1", features = ["derive"], optional = true }

# Raw-Vulkan compute path (the `vulkan` feature) — accesses
# VK_KHR_cooperative_matrix (the iGPU's WMMA), which wgpu/WGSL cannot. Shaders
# are GLSL compiled OFFLINE to SPIR-V (committed .spv, include_bytes!) so the
# build needs no glslang/SDK at compile time. See VULKAN_PLAN.md Phase 2.
ash = { version = "0.38", optional = true }
half = { version = "2", optional = true }

# (No external profiler dep — Windows ADK / pprof-rs both fail in this
# environment. Profiling done via in-process timing instrumentation
# behind the `profile` feature; see src/backend/candle/quantized_llama_fork.rs.)

[profile.release]
# Inference performance squeeze. LTO fat ~doubles release-mode build time
# (2-4 min on a typical dev machine) but yields a tighter inner loop in the
# Candle quantized matmul kernels. Single codegen unit lets LLVM see the
# whole crate at once. `strip = true` shaves a few MB from the artifact;
# debug info already isn't part of release.
lto = "fat"
codegen-units = 1
strip = true
opt-level = 3
panic = "unwind"

# Same as release but keeps debug symbols so profilers (samply,
# perf, vtune) can attribute samples to function names. About the
# same perf — debug info doesn't change generated code.
[profile.profiling]
inherits = "release"
debug = true
strip = false

[features]
default = []
# AMD iGPU compute path via wgpu/Vulkan. Build with `--features gpu`.
gpu = ["dep:wgpu", "dep:pollster", "dep:bytemuck"]
# Raw-Vulkan (ash) path for cooperative-matrix kernels. Build with
# `--features vulkan`. Off by default. See VULKAN_PLAN.md Phase 2.
vulkan = ["dep:ash", "dep:bytemuck", "dep:half"]
# Enable in-process per-layer timing inside the Candle forward path.
# Off by default (timing calls have non-zero cost). Build with
# `cargo build --profile profiling --features profile`. The chat
# handler emits a summary line per request when this is on.
profile = []
cuda = [
    "candle-core/cuda",
    "candle-nn/cuda",
    "candle-transformers/cuda",
]
metal = [
    "candle-core/metal",
    "candle-nn/metal",
    "candle-transformers/metal",
]

[dev-dependencies]
# Offline GLSL/WGSL → SPIR-V generation for new Vulkan kernels (the env has no
# glslang/glslc/SDK). naga is already in the tree via wgpu; reuse it.
naga = { version = "22.1", features = ["wgsl-in", "spv-out"] }

